--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ h5{
 </head>
 <body class="bod">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#"><img src="img/Logo.png"></a>
+      <a class="navbar-brand" href="#"><img src="img/Logo.png" alt="home"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -48,7 +48,7 @@ h5{
       </div>
   </nav>
   <div class="container" style="margin-top: 25px;">
-    <h2 class="display-4 text-center" style="color: #63291a;">Chemical-GUT</h2>
+    <h3 class="display-4 text-center" style="color: #63291a;">Chemical-GUT</h3>
     <hr>
     <h4>PRODOTTI UNICI PER LA PULIZIA, LA CURA E LA PROTEZIONE DI SUPERFICI, TESSUTI ED AMBIENTI</h4>
   </div>
@@ -98,7 +98,7 @@ h5{
     </div>
     </div>
     <div class="col-4" style="margin-top:80px">
-        <img class="img-fluid" src="img/PRODOTTI.png">
+        <img class="img-fluid" src="img/PRODOTTI.png" alt="">
     </div>
     </div>
     <hr>
